Corrections finales: mots de passe uniques, contact Pr. Hadrbache, email colloque.entrepreneuriat6@gmail.com, ajout guide hébergement gratuit garanti

--- a/templates/email-membre-comite.html
+++ b/templates/email-membre-comite.html
@@ -107,15 +107,15 @@
         <p>Nous comptons sur votre expertise pour faire de ce colloque un succès scientifique.</p>
         
         <p>Cordialement,</p>
-        <p><strong>Pr. HIDER Fouzia</strong><br>
-        Présidente du Comité Scientifique<br>
+        <p><strong>Pr. Hadrbache Bachir</strong><br>
+        Président du Comité Scientifique<br>
         Université de Bejaia</p>
     </div>
 
     <div class="footer">
         <p><strong>Colloque National sur l'Entrepreneuriat Féminin</strong><br>
         Université de Bejaia - Algérie<br>
-        Contact : colloque-ef@univ-bejaia.dz</p>
+        Contact : colloque.entrepreneuriat6@gmail.com</p>
     </div>
 </body>
 </html>
