--- a/templates/email-participant.html
+++ b/templates/email-participant.html
@@ -108,6 +108,7 @@
         
         <p>Cordialement,</p>
         <p><strong>Le Comité Scientifique</strong><br>
+        Président : Pr. Hadrbache Bachir<br>
         Colloque National sur l'Entrepreneuriat Féminin<br>
         Université de Bejaia</p>
     </div>
@@ -115,7 +116,7 @@
     <div class="footer">
         <p><strong>Colloque National sur l'Entrepreneuriat Féminin</strong><br>
         Université de Bejaia - Algérie<br>
-        Contact : colloque-ef@univ-bejaia.dz</p>
+        Contact : colloque.entrepreneuriat6@gmail.com</p>
     </div>
 </body>
 </html>
